# audd-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  contract.yml  release.yml
examples/: custom_catalog_add.py  recognize_enterprise.py  recognize_file.py  recognize_url.py  streams_callback_handler.py  streams_longpoll.py  streams_setup.py
examples/scan_and_rename/: README.md  main.py
examples/stream_to_csv/: README.md  main.py
src/audd/: __init__.py  _callbacks.py  _http.py  _retry.py  _source.py  _user_agent.py  _version.py  advanced.py  client.py  custom_catalog.py  errors.py  longpoll.py  models.py  streams.py
tests/contract/: conftest.py  test_enterprise.py  test_errors.py  test_recognize.py  test_streams.py
tests/integration/: conftest.py  test_recognize_live.py
tests/unit/: test_advanced.py  test_callbacks.py  test_client.py  test_custom_catalog.py  test_errors.py  test_http.py  test_longpoll.py  test_longpoll_one_step.py  test_models.py  test_on_event_hook.py  test_retry.py  test_review_fixes.py  test_review_fixes_longpoll.py  test_set_api_token.py  test_streaming_url_helpers.py  test_streams.py  test_token_resolution.py
